@@ -203,8 +203,9 @@ OPTION(NULLOUT     "null out back-end"    ON)
 
 # additional codecs
 OPTION(VORBIS         "vorbis support"          ON)
-OPTION(VORBIS_DLOPEN  "vorbis dynamic loading"  ON)
+#OPTION(VORBIS_DLOPEN  "vorbis dynamic loading"  ON)
 OPTION(MP3            "mp3 support"             ON)
+#OPTION(MP3_DLOPEN     "mp3 dynamic loading"     ON)
 
 IF(OPTIMIZATION)
   SET(EMPTY_LOCKS OFF)
@@ -397,7 +398,7 @@ IF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
   SET(${BACKEND_OPTION}_LINK_DIRS    "${BACKEND_LINK_DIRS}"    CACHE INTERNAL "")
   SET(${BACKEND_OPTION}_LIBS         "${BACKEND_LIBS}"         CACHE INTERNAL "")
 
-    #MESSAGE("have ${${BACKEND_OPTION}_HAVE} inc ${${BACKEND_OPTION}_INCLUDE_DIRS} def ${${BACKEND_OPTION}_DEFINES} linkdirs ${${BACKEND_OPTION}_LINK_DIRS} libs ${${BACKEND_OPTION}_LIBS}")
+  #MESSAGE("have ${${BACKEND_OPTION}_HAVE} inc ${${BACKEND_OPTION}_INCLUDE_DIRS} def ${${BACKEND_OPTION}_DEFINES} linkdirs ${${BACKEND_OPTION}_LINK_DIRS} libs ${${BACKEND_OPTION}_LIBS}")
   ENDIF(CMAKE_PKGCONFIG_EXECUTABLE)
 
   # CHECK_INCLUDE_FILE() doesn't handle include dir, so check by hand
@@ -456,7 +457,9 @@ ENDIF(${BACKEND_OPTION} AND NOT ${BACKEND_OPTION}_FOUND)
 
 IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND)
   SET(OS_OBJS ${OS_OBJS} ${${BACKEND_OPTION}_OBJS})
+  # kinda hack, but won't hurt
   ADD_DEFINE(USE_BACKEND_${BACKEND_OPTION})
+  ADD_DEFINE(ENABLE_EXTENSION_AL_EXT_${BACKEND_OPTION})
   INCLUDE_DIRECTORIES(${${BACKEND_OPTION}_INCLUDE_DIRS})
 
   IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
