@@ -1,3 +1,8 @@
+2006-01-10  Prakash Punnoor <prakash@punnoor.de>
+
+	* CMakeLists.txt: fix missing defines for extensions, disable vorbis
+	dlopen
+
 2006-01-09  Sven Panne  <sven.panne@aedion.de>
 
 	* include/AL/alext.h, src/al_buffer.c, src/extensions/al_ext_loki.h,
